# CareBridge-Agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agents.yaml  app.py  pyproject.toml  requirements.txt
carebridge/: __init__.py  agents.py  cli.py  gemini_client.py  mcp_client.py  resource_directory.py  resource_mcp_server.py  security.py  server.py
data/: resources.json
tests/: test_gemini_client.py  test_pipeline.py  test_security.py
web/: app.js  index.html  styles.css
